// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Affix support offsetBottom 1`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetBottom 2`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetBottom 3`] = `
<div
  class="container"
>
  <div>
    <div
      aria-hidden="true"
      style="width: 10px; height: 10px;"
    />
    <div
      class="xl-affix"
      style="position: fixed; bottom: 668px; width: 10px; height: 10px;"
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetBottom 4`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
      style=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetBottom 5`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
      style=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetBottom 6`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
      style=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 1`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 2`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 3`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 4`] = `
<div
  class="container"
>
  <div>
    <div
      class=""
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 5`] = `
<div
  class="container"
>
  <div>
    <div
      aria-hidden="true"
      style="width: 10px; height: 10px;"
    />
    <div
      class="xl-affix"
      style="position: fixed; top: 0px; width: 10px; height: 10px;"
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;

exports[`Affix support offsetTop 6`] = `
<div
  class="container"
>
  <div>
    <div
      aria-hidden="true"
      style="width: 10px; height: 10px;"
    />
    <div
      class="xl-affix"
      style="position: fixed; top: 0px; width: 10px; height: 10px;"
    >
      <button
        class="btn"
        type="button"
      >
        btn
      </button>
    </div>
  </div>
</div>
`;
